workshop04/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: workshop04-ns
  labels:
    name: workshop04-ns
